--- a/README
+++ b/README
@@ -15,3 +15,4 @@ Additional note:
 Larger dots on the bid/ask plot represent larger buy/sell orders. The larger the dot, the larger the order.
 
 Test comment
+More test
